Issue #3373317 by kevinfunk, mandclu: Site Studio sidebar overlaps content in Gin 3.0-rc4

--- a/css/sitestudio-gin-global.css
+++ b/css/sitestudio-gin-global.css
@@ -19,8 +19,17 @@
   mask-size: contain;
 }
 
-.ssa-element-browser-modal-open {
+[dir="ltr"] body.ssa-element-browser-modal-open.gin--vertical-toolbar {
+  padding-left: var(--gin-sidebar-width) !important;
+}
+
+[dir="ltr"] body.ssa-element-browser-modal-open.gin--horizontal-toolbar,
+[dir="ltr"] body.ssa-element-browser-modal-open.gin--classic-toolbar {
   padding-left: 320px !important;
+}
+
+body.gin--classic-toolbar #ssa-sidebar-browser {
+  top: var(--gin-toolbar-y-offset);
 }
 
 [dir="ltr"] body.gin--vertical-toolbar.ssa-page-builder-enabled {
